+ Copied new parameters for custom GO/RESET button CSS classes to parameters of category view menu items (default, mcats, myitems, author)

--- a/admin/models/forms/category.xml
+++ b/admin/models/forms/category.xml
@@ -41,7 +41,7 @@
 		
 		<fieldset name="cat_info_options" addfieldpath="/administrator/components/com_flexicontent/elements">
 			
-			<!--param name="language" type="languages" client="site" label="FLEXI_CATEGORY_LANGUAGE" description="FLEXI_CATEGORY_LANGUAGE_DESC" /-->
+			<!--field name="language" type="languages" client="site" label="FLEXI_CATEGORY_LANGUAGE" description="FLEXI_CATEGORY_LANGUAGE_DESC" /-->
 			<field name="" type="separator" default="FLEXI_CATEGORY_EXTRA" level="level2" />
 			<field name="comments" type="radio" default="" label="FLEXI_ENABLE_COMMENTS" description="FLEXI_ENABLE_COMMENTS_DESC" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
